[package]
name = "subman"
version = "0.1.0"
edition = "2021"
description = "A TUI tool for managing vmess subscription nodes"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["socks"] }
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
dirs = "5"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
